--- a/.vscodeignore
+++ b/.vscodeignore
@@ -15,7 +15,8 @@ src/**
 webview-ui/src/**
 webview-ui/public/**
 webview-ui/scripts/**
-webview-ui/index.html
+webview-ui/index_graph_editor.html
+webview-ui/index_node_template_view.html
 webview-ui/README.md
 webview-ui/package.json
 webview-ui/package-lock.json
