--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-    "name": "hello-world-react-vite",
-    "displayName": "hello-world-react-vite",
+    "name": "alchemy-graph-editor",
+    "displayName": "Alchemy Graph Editor",
     "description": "A hello world sample extension to demonstrate using React + Vite with the Webview UI Toolkit for VS Code.",
     "version": "0.0.1",
     "engines": {
-      "vscode": "^1.75.0"
+        "vscode": "^1.75.0"
     },
     "main": "./out/extension.js",
     "contributes": {
-      "customEditors": [
-        {
-            "viewType": "alchemy.graph_editor",
-            "displayName": "Alchemy Graph Editor",
-            "selector": [
-                {
-                    "filenamePattern": "*.acg"
-                }
-            ]
-        }
+        "customEditors": [
+            {
+                "viewType": "alchemy.graph_editor",
+                "displayName": "Alchemy Graph Editor",
+                "selector": [
+                    {
+                        "filenamePattern": "*.acg"
+                    }
+                ]
+            }
         ],
         "views": {
             "explorer": [
@@ -28,7 +28,7 @@
                 }
             ]
         },
-        "commands":[
+        "commands": [
             {
                 "command": "alchemy.create_new_graph",
                 "title": "Create New Graph",
@@ -42,26 +42,29 @@
         ]
     },
     "scripts": {
-      "install:all": "npm install && cd webview-ui && npm install",
-      "start:webview": "cd webview-ui && npm run start",
-      "build:webview": "cd webview-ui && npm run build",
-      "vscode:prepublish": "npm run compile",
-      "compile": "tsc -p ./",
-      "watch": "tsc -watch -p ./",
-      "pretest": "npm run compile && npm run lint",
-      "lint": "eslint src --ext ts"
+        "install:all": "npm install && cd webview-ui && npm install",
+        "start:webview": "cd webview-ui && npm run start",
+        "build:webview": "cd webview-ui && npm run build",
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./",
+        "pretest": "npm run compile && npm run lint",
+        "lint": "eslint src --ext ts"
     },
     "devDependencies": {
-      "@types/glob": "^7.1.3",
-      "@types/node": "^12.11.7",
-      "@types/vscode": "^1.86.0",
-      "@typescript-eslint/eslint-plugin": "^4.14.1",
-      "@typescript-eslint/parser": "^4.14.1",
-      "eslint": "^7.19.0",
-      "glob": "^7.1.6",
-      "prettier": "^2.2.1",
-      "typescript": "^4.1.3",
-      "vscode-test": "^1.5.0"
+        "@types/glob": "^7.1.3",
+        "@types/node": "^12.11.7",
+        "@types/uuid": "^9.0.8",
+        "@types/vscode": "^1.86.0",
+        "@typescript-eslint/eslint-plugin": "^4.14.1",
+        "@typescript-eslint/parser": "^4.14.1",
+        "eslint": "^7.19.0",
+        "glob": "^7.1.6",
+        "prettier": "^2.2.1",
+        "typescript": "^4.1.3",
+        "vscode-test": "^1.5.0"
+    },
+    "dependencies": {
+        "uuid": "^9.0.1"
     }
-  }
-  
+}
